--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,7 @@ telegraphAuthorName=Manga Reader Bot
 telegraphAuthorUrl=https://t.me/MangaManhwa_bot?start=telegraph1902
 
 
-
+mangaStorage=-1002092468371L
+backupMangaStorage=-1002119024676L
+coverStorage=-1002244820024L
+backupCoverStorage=-1002184663722L
