--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-#bot.name=Manga Reader Bot
-#bot.token=6156139593:AAF1fqzVZlpgiPGarafWcTCl1TCFaHD1X8A
+bot.name=Manga Reader Bot
+bot.token=6156139593:AAF1fqzVZlpgiPGarafWcTCl1TCFaHD1X8A
 
-bot.name=SpringDemoBot
-bot.token=6047343999:AAHMRH8WdvGl6YCKX-5rpXWiPh8snjnI5cM
+#bot.name=SpringDemoBot
+#bot.token=6047343999:AAHMRH8WdvGl6YCKX-5rpXWiPh8snjnI5cM
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.username=ubuntu
+spring.datasource.username=ubuntu
 #spring.datasource.url=jdbc:postgresql://185.18.55.159/manga_manhwa_db
-spring.datasource.username=postgres
+#spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost/manga_manhwa_db
 spring.datasource.password=yellowF310
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
